--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install
-        uses: ./.github/actions/prepare-install.yml
+        uses: ./.github/actions/prepare-install
 
   web-ci:
     needs: prepare
