--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -19,7 +19,9 @@
     "noUncheckedIndexedAccess": true,
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "isolatedModules": true,
+    "verbatimModuleSyntax": true
   },
   "include": ["src", "*.js", "*.ts"]
 }
