prepare-installにデバックステップ追加

--- a/.github/actions/prepare-install/action.yml
+++ b/.github/actions/prepare-install/action.yml
@@ -4,6 +4,10 @@ description: Prepare and install dependencies
 runs:
   using: "composite"
   steps:
+    - name: echo github.ref
+      shell: bash
+      run: echo ${{ github.ref }}
+
     - name: Set up Node.js
       uses: actions/setup-node@v4
       with:
