--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -12,12 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 22
-          cache: "npm"
-      - name: Install dependencies
-        run: npm ci
+      - name: Install
+        uses: ./.github/actions/prepare-install
 
       - name: Install Playwright Browsers
         run: |
