--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,18 +38,11 @@ jobs:
           echo "web_changed: ${web_changed}"
           echo "api_changed: ${api_changed}"
 
-  install:
-    name: Checkout and Install
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
       - name: Install
         uses: ./.github/actions/prepare-install
 
   web-static-test:
-    needs: [prepare, install]
+    needs: [prepare]
     runs-on: ubuntu-latest
     if: ${{ needs.prepare.outputs.web_changed == 'true' }}
     strategy:
@@ -69,7 +62,7 @@ jobs:
         run: npm run ${{ matrix.test }}
 
   api-static-test:
-    needs: [prepare, install]
+    needs: [prepare]
     runs-on: ubuntu-latest
     if: ${{ needs.prepare.outputs.api_changed == 'true' }}
     strategy:
