--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,8 @@
     "start": "next start",
     "lint": "eslint",
     "type-check": "tsc --noEmit",
+    "test": "vitest",
+    "test:ci": "vitest run",
     "test:e2e": "npx playwright test"
   },
   "devDependencies": {
@@ -23,6 +25,7 @@
     "@types/react": "19.0.10",
     "eslint": "^9.20.1",
     "eslint-config-next": "15.1.7",
+    "jsdom": "^26.0.0",
     "typescript": "^5.8.2",
     "vitest": "^3.0.6"
   },
