--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,3 +80,16 @@ jobs:
 
       - name: Run Test
         run: npm run ${{ matrix.test }}
+
+  api-static-test-results:
+    if: ${{ always() }}
+    runs-on: ubuntu-latest
+    needs: [api-static-test]
+    steps:
+      - run: |
+          result="${{ needs.api-static-test.result }}"
+          if [[ $result == "success" || $result == "skipped" ]]; then
+            exit 0
+          else
+            exit 1
+          fi
