--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,19 @@ jobs:
       - name: Run Test
         run: npm run ${{ matrix.test }}
 
+  web-static-test-results:
+    if: ${{ always() }}
+    runs-on: ubuntu-latest
+    needs: [web-static-test]
+    steps:
+      - run: |
+          result="${{ needs.web-static-test.result }}"
+          if [[ $result == "success" || $result == "skipped" ]]; then
+            exit 0
+          else
+            exit 1
+          fi
+
   api-static-test:
     needs: [prepare]
     runs-on: ubuntu-latest
