--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,7 +89,5 @@ jobs:
       - run: exit 1
         if: >-
           ${{
-            contains(needs.*.result, 'failure')
-            || contains(needs.*.result, 'cancelled')
-            || contains(needs.*.result, 'skipped')
+            contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')
           }}
