--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,18 +86,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [api-static-test, web-static-test]
     steps:
-      - run: |
-          failed_jobs=()
-          jobs="${{ join(needs.*.result, ' ') }}"
-
-          for job in $jobs; do
-            if [[ "$job" == "failure" || "$job" == "cancelled" ]]; then
-              failed_jobs+=("$job")
-            fi
-          done
-
-          echo "❌ The following jobs failed: ${failed_jobs[@]}"
-          exit 1
+      - run: exit 1
         if: >-
           ${{
             contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')
