--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,3 +80,14 @@ jobs:
 
       - name: Run Test
         run: npm run ${{ matrix.test }}
+
+  static-test-results:
+    if: ${{ always() }}
+    runs-on: ubuntu-latest
+    needs: [api-static-test, web-static-test]
+    steps:
+      - run: exit 1
+        if: >-
+          ${{
+            contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')
+          }}
