needsの指定ミス修正

--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -38,7 +38,7 @@ jobs:
   test-results:
     if: ${{ always() }}
     runs-on: ubuntu-latest
-    needs: [api-static-test]
+    needs: [test]
     steps:
       - run: exit 1
         if: >-
