--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@repo/eslint-config": "^1.0.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "@types/eslint__eslintrc": "^2.1.2",
     "@types/node": "^22.13.5",
     "@types/react": "19.0.10",
