--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -2,16 +2,8 @@ name: API CI
 
 on:
   push:
-    paths:
-      - "apps/api/**"
-      - "packages/eslint-config/**"
-      - "package.json"
     branches: [main]
   pull_request:
-    paths:
-      - "apps/api/**"
-      - "packages/eslint-config/**"
-      - "package.json"
     branches: [main]
 
 concurrency:
@@ -23,7 +15,22 @@ defaults:
     working-directory: apps/api
 
 jobs:
+  changes:
+    runs-on: ubuntu-latest
+    permissions:
+      pull-requests: read
+    outputs:
+      api: ${{ steps.filter.outputs.api }}
+    steps:
+      - uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            api:
+              - 'apps/api/**'
+
   api-type-check:
+    if: ${{ needs.changes.outputs.api == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -36,6 +43,7 @@ jobs:
         run: npm run type-check
 
   api-lint:
+    if: ${{ needs.changes.outputs.api == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
