--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -30,6 +30,7 @@ jobs:
               - 'apps/api/**'
 
   api-type-check:
+    needs: changes
     if: ${{ needs.changes.outputs.api == 'true' }}
     runs-on: ubuntu-latest
     steps:
@@ -43,6 +44,7 @@ jobs:
         run: npm run type-check
 
   api-lint:
+    needs: changes
     if: ${{ needs.changes.outputs.api == 'true' }}
     runs-on: ubuntu-latest
     steps:
