--- a/.github/workflows/web-ci.yml
+++ b/.github/workflows/web-ci.yml
@@ -29,6 +29,7 @@ jobs:
             web:
               - 'apps/web/**'
   web-build:
+    needs: changes
     if: ${{ needs.changes.outputs.web == 'true' }}
     runs-on: ubuntu-latest
     steps:
@@ -51,6 +52,7 @@ jobs:
         run: npm run build
 
   web-lint:
+    needs: changes
     if: ${{ needs.changes.outputs.web == 'true' }}
     runs-on: ubuntu-latest
     steps:
