--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -19,6 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       pull-requests: read
+      contents: read
     outputs:
       api: ${{ steps.filter.outputs.api }}
     steps:
