--- a/.github/workflows/web-ci.yml
+++ b/.github/workflows/web-ci.yml
@@ -19,6 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       pull-requests: read
+      contents: read
     outputs:
       web: ${{ steps.filter.outputs.web }}
     steps:
