--- a/.github/workflows/web-ci.yml
+++ b/.github/workflows/web-ci.yml
@@ -19,10 +19,11 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       pull-requests: read
-      contents: read
     outputs:
       web: ${{ steps.filter.outputs.web }}
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - uses: dorny/paths-filter@v3
         id: filter
         with:
