apiのtsconfigの設定更新

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -21,7 +21,8 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "isolatedModules": true,
-    "verbatimModuleSyntax": true
+    "verbatimModuleSyntax": true,
+    "erasableSyntaxOnly": true
   },
   "include": ["src", "*.js", "*.ts"]
 }
