--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -58,3 +58,17 @@ jobs:
 
       - name: Run Test
         run: npm run lint
+
+  api-test:
+    needs: changes
+    if: ${{ needs.changes.outputs.api == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install
+        uses: ./.github/actions/prepare-install
+
+      - name: Run Test
+        run: npm run test:ci
