--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "@types/eslint__eslintrc": "^2.1.2",
     "@types/node": "^22.13.5",
     "@types/react": "19.0.10",
+    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.20.1",
     "eslint-config-next": "15.1.7",
     "jsdom": "^26.0.0",
