--- a/apps/web/netlify.toml
+++ b/apps/web/netlify.toml
@@ -1,2 +1,2 @@
 [build]
-  ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF apps/web ./package.json"
+ignore = "bash ./scripts/ignore-build.sh"
