--- a/apps/web/netlify.toml
+++ b/apps/web/netlify.toml
@@ -1,2 +1,2 @@
 [build]
-  ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF -- apps/web"
+  ignore = "git diff --name-only $CACHED_COMMIT_REF $COMMIT_REF | tee /dev/stderr | grep -q '^apps/web/'"
