--- a/apps/web/netlify.toml
+++ b/apps/web/netlify.toml
@@ -1,2 +1,2 @@
 [build]
-  ignore = "echo 'Changed files:' && git diff --name-only $CACHED_COMMIT_REF $COMMIT_REF && git diff --name-only $CACHED_COMMIT_REF $COMMIT_REF | grep -q '^apps/web/'"
+  ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF -- apps/web/"
