--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -32,6 +32,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./docs/build
+          name: hoge
 
   deploy:
     name: Deploy to GitHub Pages
@@ -50,3 +51,5 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          name: hoge
