--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -52,4 +52,4 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
         with:
-          name: hoge
+          artifact_name: hoge
