--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
+    "lint": "eslint --cache --cache-strategy content",
     "type-check": "tsc --noEmit",
     "test": "vitest",
     "test:ci": "vitest run",
