--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,7 +10,7 @@
     "start": "nest start",
     "dev": "nest start --watch",
     "build": "nest build",
-    "lint": "eslint",
+    "lint": "eslint --cache --cache-strategy content",
     "test": "vitest",
     "test:ci": "vitest run",
     "type-check": "tsc --noEmit"
