--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -56,6 +56,13 @@ jobs:
       - name: Install
         uses: ./.github/actions/prepare-install
 
+      - name: cache eslint
+        uses: actions/cache@v4
+        with:
+          path: ${{ github.workspace }}/apps/api/.eslintcache
+          key: ${{ runner.os }}-eslint-${{ hashFiles('**/package-lock.json','${{ github.workspace }}/apps/api/eslint.config.js') }}
+          restore-keys: ${{ runner.os }}-eslint-
+
       - name: Run Test
         run: npm run lint
 
