--- a/.github/workflows/web-ci.yml
+++ b/.github/workflows/web-ci.yml
@@ -14,6 +14,9 @@ defaults:
   run:
     working-directory: apps/web
 
+env:
+  WEB_ROOT_DIR: ${{ github.workspace }}/apps/web
+
 jobs:
   changes:
     runs-on: ubuntu-latest
@@ -45,7 +48,7 @@ jobs:
         id: cache-next
         uses: actions/cache@v4
         with:
-          path: ${{ github.workspace }}/apps/web/.next/cache
+          path: ${{ env.WEB_ROOT_DIR }}/.next/cache
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
@@ -67,8 +70,8 @@ jobs:
       - name: cache eslint
         uses: actions/cache@v4
         with:
-          path: ${{ github.workspace }}/apps/web/.eslintcache
-          key: ${{ runner.os }}-eslint-${{ hashFiles('**/package-lock.json','${{ github.workspace }}/apps/web/eslint.config.js') }}
+          path: ${{ env.WEB_ROOT_DIR }}/.eslintcache
+          key: ${{ runner.os }}-eslint-${{ hashFiles('**/package-lock.json','${{ env.WEB_ROOT_DIR }}/eslint.config.js') }}
 
       - name: Run Lint
         run: npm run lint
