--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -14,6 +14,9 @@ defaults:
   run:
     working-directory: apps/api
 
+env:
+  API_ROOT_DIR: ${{ github.workspace }}/apps/api
+
 jobs:
   changes:
     runs-on: ubuntu-latest
@@ -56,7 +59,13 @@ jobs:
       - name: Install
         uses: ./.github/actions/prepare-install
 
-      - name: Run Test
+      - name: Cache Eslint
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.API_ROOT_DIR }}/.eslintcache
+          key: ${{ runner.os }}-eslint-${{ hashFiles('**/package-lock.json','${{ env.API_ROOT_DIR }}/eslint.config.js') }}
+
+      - name: Run Lint
         run: npm run lint
 
   api-test:
