--- a/apps/api/.gitignore
+++ b/apps/api/.gitignore
@@ -13,12 +13,8 @@
 # testing
 /coverage
 
-# next.js
-/.next/
-/out/
-
 # production
-/build
+/dist
 
 # misc
 .DS_Store
@@ -31,9 +27,6 @@ yarn-error.log*
 
 # env files (can opt-in for commiting if needed)
 .env*
-
-# vercel
-.vercel
 
 # typescript
 *.tsbuildinfo
