--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,14 +11,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
+    "lint": "eslint --cache --cache-strategy content",
     "type-check": "tsc --noEmit",
     "test": "vitest",
     "test:ci": "vitest run",
     "test:e2e": "npx playwright test"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/eslintrc": "^3.3.1",
     "@repo/eslint-config": "^1.0.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -27,13 +27,13 @@
     "@types/react": "19.0.10",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.20.1",
-    "eslint-config-next": "15.1.7",
+    "eslint-config-next": "^15.1.7",
     "jsdom": "^26.0.0",
     "typescript": "^5.8.2",
     "vitest": "^3.0.6"
   },
   "dependencies": {
-    "next": "^15.1.7",
+    "next": "^15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   }
